--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,11 +15,16 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "lucide-react": "^0.473.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
