--- a/cloudbuild/stg.yaml
+++ b/cloudbuild/stg.yaml
@@ -99,6 +99,9 @@ steps:
         set -euo pipefail
         API_BASE="${_API_SMOKE_URL}" WEB_BASE="${_WEB_SMOKE_URL}" node tools/verify-stg.mjs
 
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 substitutions:
   _REGION: "europe-central2"
   _ARTIFACT_REPO: "papadata-platform"
