--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "noEmit": false,
+    "incremental": false,
     "paths": {
       "@nestjs/common": ["../../node_modules/@nestjs/common"],
       "@papadata/shared": ["../../libs/shared/dist"],
@@ -9,10 +11,5 @@
     }
   },
   "include": ["src/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "test",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["node_modules", "dist", "test", "**/*.spec.ts"]
 }
