--- a/cloudbuild/stg.yaml
+++ b/cloudbuild/stg.yaml
@@ -74,7 +74,7 @@ steps:
       - "--set-secrets"
       - "DATABASE_URL=DATABASE_URL:latest,JWT_SECRET=JWT_SECRET:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest,STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET:latest"
       - "--set-env-vars"
-      - "APP_MODE=demo,PORT=8080,NODE_ENV=production,CORS_ALLOWED_ORIGINS=${_CORS_ALLOWED_ORIGINS},VERTEX_PROJECT_ID=${_VERTEX_PROJECT_ID},VERTEX_LOCATION=${_VERTEX_LOCATION},VERTEX_MODEL=${_VERTEX_MODEL},AI_ENABLED=${_AI_ENABLED},AI_ENABLED_DEMO=${_AI_ENABLED_DEMO},AI_ENABLED_PROD=${_AI_ENABLED_PROD},AI_RATE_LIMIT_MAX=${_AI_RATE_LIMIT_MAX},AI_RATE_LIMIT_WINDOW_MS=${_AI_RATE_LIMIT_WINDOW_MS},AI_TIMEOUT_MS=${_AI_TIMEOUT_MS},AI_USAGE_LIMIT_BASIC=${_AI_USAGE_LIMIT_BASIC},AI_USAGE_LIMIT_PRIORITY=${_AI_USAGE_LIMIT_PRIORITY},AI_USAGE_LIMIT_FULL=${_AI_USAGE_LIMIT_FULL},OBSERVABILITY_PROVIDER=${_OBSERVABILITY_PROVIDER},OBSERVABILITY_DSN=${_OBSERVABILITY_DSN},FIREBASE_PROJECT_ID=${_FIREBASE_PROJECT_ID}"
+      - "APP_MODE=demo,NODE_ENV=production,CORS_ALLOWED_ORIGINS=${_CORS_ALLOWED_ORIGINS},VERTEX_PROJECT_ID=${_VERTEX_PROJECT_ID},VERTEX_LOCATION=${_VERTEX_LOCATION},VERTEX_MODEL=${_VERTEX_MODEL},AI_ENABLED=${_AI_ENABLED},AI_ENABLED_DEMO=${_AI_ENABLED_DEMO},AI_ENABLED_PROD=${_AI_ENABLED_PROD},AI_RATE_LIMIT_MAX=${_AI_RATE_LIMIT_MAX},AI_RATE_LIMIT_WINDOW_MS=${_AI_RATE_LIMIT_WINDOW_MS},AI_TIMEOUT_MS=${_AI_TIMEOUT_MS},AI_USAGE_LIMIT_BASIC=${_AI_USAGE_LIMIT_BASIC},AI_USAGE_LIMIT_PRIORITY=${_AI_USAGE_LIMIT_PRIORITY},AI_USAGE_LIMIT_FULL=${_AI_USAGE_LIMIT_FULL},OBSERVABILITY_PROVIDER=${_OBSERVABILITY_PROVIDER},OBSERVABILITY_DSN=${_OBSERVABILITY_DSN},FIREBASE_PROJECT_ID=${_FIREBASE_PROJECT_ID}"
 
   - id: "deploy-web"
     name: "gcr.io/cloud-builders/gcloud"
