--- a/cloudbuild/stg.yaml
+++ b/cloudbuild/stg.yaml
@@ -1,4 +1,4 @@
-steps:
+﻿steps:
   - id: "install-build-test"
     name: "node:22-slim"
     entrypoint: "bash"
@@ -108,13 +108,13 @@ substitutions:
   _SERVICE_API: "papadata-api-stg"
   _SERVICE_WEB: "papadata-web-stg"
   _APP_ENV: "stg"
-  _API_BASE_URL: "https://api.papadata.pl/api"
+  _API_BASE_URL: "https://papadata-api-stg-967318112487.europe-central2.run.app/api"
   _LEGAL_DOCS_BASE_URL: ""
   _OBSERVABILITY_PROVIDER: "none"
   _OBSERVABILITY_DSN: ""
-  _CORS_ALLOWED_ORIGINS: "https://stg.papadata.pl"
-  _API_SMOKE_URL: "https://api.papadata.pl/api"
-  _WEB_SMOKE_URL: "https://stg.papadata.pl"
+  _CORS_ALLOWED_ORIGINS: "https://papadata-web-stg-967318112487.europe-central2.run.app"
+  _API_SMOKE_URL: "https://papadata-api-stg-967318112487.europe-central2.run.app/api"
+  _WEB_SMOKE_URL: "https://papadata-web-stg-967318112487.europe-central2.run.app"
   _VERTEX_PROJECT_ID: "papadata-platform-stg"
   _VERTEX_LOCATION: "europe-central2"
   _VERTEX_MODEL: "gemini-2.5-flash-lite"
@@ -130,3 +130,4 @@ substitutions:
   _FIREBASE_PROJECT_ID: ""
 
 timeout: "1200s"
+
