--- a/cloudbuild/stg.yaml
+++ b/cloudbuild/stg.yaml
@@ -74,7 +74,7 @@
       - "--set-secrets"
       - "DATABASE_URL=DATABASE_URL:latest,JWT_SECRET=JWT_SECRET:latest,STRIPE_SECRET_KEY=STRIPE_SECRET_KEY:latest,STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET:latest"
       - "--set-env-vars"
-      - "APP_MODE=demo,NODE_ENV=production,CORS_ALLOWED_ORIGINS=${_CORS_ALLOWED_ORIGINS},VERTEX_PROJECT_ID=${_VERTEX_PROJECT_ID},VERTEX_LOCATION=${_VERTEX_LOCATION},VERTEX_MODEL=${_VERTEX_MODEL},AI_ENABLED=${_AI_ENABLED},AI_ENABLED_DEMO=${_AI_ENABLED_DEMO},AI_ENABLED_PROD=${_AI_ENABLED_PROD},AI_RATE_LIMIT_MAX=${_AI_RATE_LIMIT_MAX},AI_RATE_LIMIT_WINDOW_MS=${_AI_RATE_LIMIT_WINDOW_MS},AI_TIMEOUT_MS=${_AI_TIMEOUT_MS},AI_USAGE_LIMIT_BASIC=${_AI_USAGE_LIMIT_BASIC},AI_USAGE_LIMIT_PRIORITY=${_AI_USAGE_LIMIT_PRIORITY},AI_USAGE_LIMIT_FULL=${_AI_USAGE_LIMIT_FULL},OBSERVABILITY_PROVIDER=${_OBSERVABILITY_PROVIDER},OBSERVABILITY_DSN=${_OBSERVABILITY_DSN},FIREBASE_PROJECT_ID=,ENTITLEMENTS_BILLING_STATUS=active${_FIREBASE_PROJECT_ID}"
+      - "APP_MODE=demo,NODE_ENV=production,CORS_ALLOWED_ORIGINS=${_CORS_ALLOWED_ORIGINS},VERTEX_PROJECT_ID=${_VERTEX_PROJECT_ID},VERTEX_LOCATION=${_VERTEX_LOCATION},VERTEX_MODEL=${_VERTEX_MODEL},AI_ENABLED=${_AI_ENABLED},AI_ENABLED_DEMO=${_AI_ENABLED_DEMO},AI_ENABLED_PROD=${_AI_ENABLED_PROD},AI_RATE_LIMIT_MAX=${_AI_RATE_LIMIT_MAX},AI_RATE_LIMIT_WINDOW_MS=${_AI_RATE_LIMIT_WINDOW_MS},AI_TIMEOUT_MS=${_AI_TIMEOUT_MS},AI_USAGE_LIMIT_BASIC=${_AI_USAGE_LIMIT_BASIC},AI_USAGE_LIMIT_PRIORITY=${_AI_USAGE_LIMIT_PRIORITY},AI_USAGE_LIMIT_FULL=${_AI_USAGE_LIMIT_FULL},OBSERVABILITY_PROVIDER=${_OBSERVABILITY_PROVIDER},OBSERVABILITY_DSN=${_OBSERVABILITY_DSN},FIREBASE_PROJECT_ID=${_FIREBASE_PROJECT_ID},ENTITLEMENTS_BILLING_STATUS=active"
 
   - id: "deploy-web"
     name: "gcr.io/cloud-builders/gcloud"
@@ -108,13 +108,13 @@ substitutions:
   _SERVICE_API: "papadata-api-stg"
   _SERVICE_WEB: "papadata-web-stg"
   _APP_ENV: "stg"
-  _API_BASE_URL: "https://papadata-api-stg-967318112487.europe-central2.run.app/api"
+  _API_BASE_URL: "https://papadata-api-stg-d6hyksf2xq-lm.a.run.app/api"
   _LEGAL_DOCS_BASE_URL: ""
   _OBSERVABILITY_PROVIDER: "none"
   _OBSERVABILITY_DSN: ""
-  _CORS_ALLOWED_ORIGINS: "https://papadata-web-stg-967318112487.europe-central2.run.app"
-  _API_SMOKE_URL: "https://papadata-api-stg-967318112487.europe-central2.run.app/api"
-  _WEB_SMOKE_URL: "https://papadata-web-stg-967318112487.europe-central2.run.app"
+  _CORS_ALLOWED_ORIGINS: "https://papadata-web-stg-d6hyksf2xq-lm.a.run.app"
+  _API_SMOKE_URL: "https://papadata-api-stg-d6hyksf2xq-lm.a.run.app/api"
+  _WEB_SMOKE_URL: "https://papadata-web-stg-d6hyksf2xq-lm.a.run.app"
   _VERTEX_PROJECT_ID: "papadata-platform-stg"
   _VERTEX_LOCATION: "europe-central2"
   _VERTEX_MODEL: "gemini-2.5-flash-lite"
