fix: apply audit findings

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,8 @@
     "test:e2e": "playwright test",
     "test:unit": "node ./scripts/run-vitest.mjs",
     "test:smoke": "playwright test --grep @smoke",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
