--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -6,8 +6,8 @@
     "baseUrl": ".",
     "paths": {
       "@nestjs/common": ["../../node_modules/@nestjs/common"],
-      "@papadata/shared": ["../../libs/shared/src"],
-      "@papadata/shared/*": ["../../libs/shared/src/*"]
+      "@papadata/shared": ["../../libs/shared/dist"],
+      "@papadata/shared/*": ["../../libs/shared/dist/*"]
     },
     "rootDir": "src",
     "outDir": "./dist",
