--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,8 @@
     "@fastify/cors": "^11.2.0",
     "@fastify/helmet": "^13.0.2",
     "@google-cloud/vertexai": "^1.7.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "@nestjs/common": "^11.1.12",
     "@nestjs/core": "^11.1.12",
     "@nestjs/jwt": "^11.0.2",
