--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "promote:prod": "node -e \"const{spawnSync}=require('node:child_process');const project=process.env.GOOGLE_CLOUD_PROJECT||process.env.GCP_PROJECT_ID||'';const okProject=project==='papadata-platform-prod';const confirmed=process.env.CONFIRM_PROD==='1';if(!okProject&&!confirmed){console.error('Refusing to deploy. Set GOOGLE_CLOUD_PROJECT=papadata-platform-prod (or GCP_PROJECT_ID) or CONFIRM_PROD=1.');process.exit(1);}const resolvedProject=okProject?project:'papadata-platform-prod';const result=spawnSync('gcloud',['builds','submit','--config','cloudbuild/prod.yaml','--project',resolvedProject],{stdio:'inherit'});process.exit(result.status??1);\""
   },
   "devDependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "semver": "^7.3.8",
+    "signal-exit": "3.0.7"
   },
   "lint-staged": {
     "apps/api/**/*.{ts,tsx}": [
@@ -48,6 +52,11 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "pnpm": {
+    "overrides": {
+      "signal-exit": "3.0.7"
+    }
   },
   "engines": {
     "node": ">=18.18 <23",
